Menu Command Parameters expanded, Have General Tutor working. Started working on fixing Specific Tutors.